<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/helpLbl"
        style="@style/BlackText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp"
        android:text="HELP"
        android:textSize="28sp" />
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="vertical">
            
            <LinearLayout 
                android:id="@+id/help1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border"
                android:orientation="vertical">
                <TextView 
                    android:id="@+id/help1Lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/helpitem1"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/helpDesc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView 
                    android:id="@+id/helpDesc1Lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/helpdescitem1"
                    android:textSize="14sp"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/help2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/side_border_bottom"
                android:orientation="vertical">
                <TextView 
                    android:id="@+id/help2Lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/helpitem2"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/helpDesc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView 
                    android:id="@+id/helpDesc2Lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/helpdescitem2"
                    android:textSize="14sp"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/help3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/side_border_bottom"
                android:orientation="vertical">
                <TextView 
                    android:id="@+id/help3Lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/helpitem3"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/helpDesc3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView 
                    android:id="@+id/helpDesc3Lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/helpdescitem3"
                    android:textSize="14sp"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/help4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/side_border_bottom"
                android:orientation="vertical">
                <TextView 
                    android:id="@+id/help4Lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/helpitem4"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/helpDesc4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView 
                    android:id="@+id/helpDesc4Lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/helpdescitem4"
                    android:textSize="14sp"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/help5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/side_border_bottom"
                android:orientation="vertical">
                <TextView 
                    android:id="@+id/help5Lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/helpitem5"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/helpDesc5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView 
                    android:id="@+id/helpDesc5Lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/helpdescitem5"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
        
    </ScrollView>
    
</LinearLayout>
